# grpcMMO

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: linux-ci.yml  windows-ci.yml
asset/model/: ground_preview.gltf  player_cube.gltf
asset/model/ground_pbr/: SOURCE.txt
client/: CMakeLists.txt  README.md
client/src/: Actor.hpp  ActorFactory.hpp  AssetBootstrap.cpp  AssetBootstrap.hpp  Camera.cpp  Camera.hpp  CameraActor.hpp  CameraBoon.cpp  CameraBoon.hpp  CameraDirector.cpp  CameraDirector.hpp  Character.hpp  Client.cpp  Client.hpp  ClientWorld.cpp  ClientWorld.hpp  Controller.cpp  Controller.hpp  FrameSceneBridge.cpp  FrameSceneBridge.hpp  GrpcSessionClient.cpp  GrpcSessionClient.hpp  MoveCommand.hpp  Object.hpp  Pawn.cpp  Pawn.hpp  PlayerController.cpp  PlayerController.hpp  Scene.cpp  Scene.hpp  TerrainPatchSampler.hpp  WorkspacePaths.cpp  WorkspacePaths.hpp  WorldActor.hpp  main.cpp
cmake/: GrpcMMOWorkspace.cmake
docs/: ARCHITECTURE.md  CLIENT_ACTOR_HARNESS.md  FRAME_RENDER_PASS_BUG_REPORT.md  PLANET_RUNTIME.md  PROTO_INTERFACE.md  REPO_PLAN.md  TERRAIN_PIPELINE.md
game/: CMakeLists.txt
game/include/grpcmmo/game/: AuthoritativeWorld.hpp
game/src/: AuthoritativeWorld.cpp
proto/: CMakeLists.txt  README.md
proto/auth/v1/: auth.proto
proto/chat/v1/: chat.proto
proto/combat/v1/: combat.proto
proto/session/v1/: session.proto
proto/storage/v1/: storage.proto
proto/world/v1/: replication.proto
services/auth_server/: CMakeLists.txt
services/auth_server/src/: main.cpp
services/game_server/: CMakeLists.txt
services/game_server/src/: main.cpp
services/storage_server/: CMakeLists.txt
services/storage_server/src/: main.cpp
shared/: CMakeLists.txt
shared/include/grpcmmo/shared/: Time.hpp  WorkspaceConfig.hpp.in
shared/include/grpcmmo/shared/planet/: CubeSphereAddress.hpp  PlanetConstants.hpp  PlanetMath.hpp  PreviewPatchConfig.hpp  PreviewPatchTerrainSampler.hpp
storage/: CMakeLists.txt
storage/include/grpcmmo/storage/: SqliteStorage.hpp  StorageBackend.hpp
storage/src/: SqliteStorage.cpp
tests/: CMakeLists.txt
tests/client/: ClientHarnessTests.cpp
tests/game/: AuthoritativeWorldTests.cpp
tests/shared/: PlanetMathTests.cpp  PreviewPatchTerrainSamplerTests.cpp
tests/tools/: TerrainPatchBakerTests.cpp
tools/: CMakeLists.txt  fetch_mars_source.py  verify_workspace.ps1
tools/account_tool/: CMakeLists.txt
tools/account_tool/src/: main.cpp
tools/terrain_tool/: CMakeLists.txt
tools/terrain_tool/src/: TerrainPatchBaker.cpp  TerrainPatchBaker.hpp  main.cpp
